--- a/packages/ui-toolkit/02-tools/tools-all/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-all/index.scss
@@ -1,3 +1,4 @@
+@import '@bolt/tools-export-data';
 @import '@bolt/tools-strip-unit';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-font-family';
