--- a/packages/ui-toolkit/bolt/bolt-styleguide.scss
+++ b/packages/ui-toolkit/bolt/bolt-styleguide.scss
@@ -36,6 +36,9 @@
 @import '@bolt/components-page-intro';
 @import '@bolt/components-sg-article/index';
 @import '@bolt/components-sg-navigation/index';
+
+@import './packages/ui-toolkit/06-components/components-color-swatch/components.color-swatch';
+
 // @import '@bolt/components-sg-navigation';
 // @import '../06-components/components.headings.refactor';
 // @import '../06-components/components.article.refactor';
