elements-headings, settings-global, generic-reset, generic-shared: build and docs (#111)
* fix: removing submodules

* WIP: headings and block resets

* docs: generic headings h1 to h6

--- a/packages/build-tools/build-styles/tests/basics/dest/style.css
+++ b/packages/build-tools/build-styles/tests/basics/dest/style.css
@@ -1,15 +1,1 @@
-body {
-  z-index: 42;
-}
-
-.c-site {
-  padding: 12px;
-}
-
-.u-test-hide {
-  display: none !important;
-}
-
-.u-test-show {
-  display: block !important;
-}
+body{z-index:42}.c-site{padding:12px}.u-test-hide{display:none!important}.u-test-show{display:block!important}
