--- a/packages/ui-toolkit/01-settings/settings-global/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-global/index.scss
@@ -1,27 +1,62 @@
+////
+/// @group Settings: Global
+/// @author Mike Mai
+////
+
+
 /* ------------------------------------ *\
-  Global Settings
+   Global Settings
 \* ------------------------------------ */
 
-// $global-font-size: 16px;
-// $global-line-height: 1.5 * $global-font-size;
-// $global-border-radius: 4px;
-// $spacing-unit: 16px;
-// $spacing-unit-xxsmall: $spacing-unit * 0.125;
-// $spacing-unit-xsmall: $spacing-unit * 0.25;
-// $spacing-unit-small: $spacing-unit * 0.5;
-// $spacing-unit-medium: $spacing-unit;
-// $spacing-unit-large: $spacing-unit * 2;
-// $spacing-unit-xlarge: $spacing-unit * 4;
-// $global-page-max-width: 1200px;
-// $shadow-size: 0 0 5px;
-
-// Async font loading classes
-$fonts-subset-loaded-class: 'js-fonts-subset-loaded' !default;
-$fonts-loaded-class: 'js-fonts-loaded' !default;
-
-// $global-rootsize: 12;
-// $global-breakpoint-separator: \@ !default;
+// Async font loading classes.
+$bolt-fonts--subset-loaded-class: 'js-fonts-subset-loaded' !default;
+$bolt-fonts--loaded-class: 'js-fonts-loaded' !default;
 
 
-// $golden-aside-width: 21.6447;
-// $golden-main-width: (100 - ($golden-aside-width*2));
+/* ------------------------------------ *\
+   All block elements
+\* ------------------------------------ */
+
+/// Bolt's definition of block level elements.
+$bolt-block-elements-list: 'p',
+                           'pre',
+                           'blockquote',
+                           'table',
+                           'ol',
+                           'ul',
+                           'dl',
+                           'fieldset',
+                           'legend',
+                           'details',
+                           'summary',
+                           'hr',
+                           'address';
+
+$bolt-unquoted-block-elements-list: ();
+
+@each $bolt-block-element-type in $bolt-block-elements-list {
+  $bolt-unquoted-block-elements-list: append($bolt-unquoted-block-elements-list, unquote($bolt-block-element-type), comma) !global;
+}
+
+$bolt-all-block-elements: $bolt-unquoted-block-elements-list;
+@debug $bolt-all-block-elements;
+
+/* ------------------------------------ *\
+   All heading elements
+\* ------------------------------------ */
+
+/// Bolt's definition of heading elements.
+$bolt-heading-elements-list: 'h1',
+                             'h2',
+                             'h3',
+                             'h4',
+                             'h5',
+                             'h6';
+
+$bolt-unquoted-heading-elements-list: ();
+
+@each $bolt-heading-element-type in $bolt-heading-elements-list {
+  $bolt-unquoted-heading-elements-list: append($bolt-unquoted-heading-elements-list, unquote($bolt-heading-element-type), comma) !global;
+}
+
+$bolt-all-heading-elements: $bolt-unquoted-heading-elements-list;
