--- a/packages/bolt-toolkit-core/02-tools/tools-text-contrast/_tools.text-contrast.scss
+++ b/packages/bolt-toolkit-core/02-tools/tools-text-contrast/_tools.text-contrast.scss
@@ -4,11 +4,11 @@
 
 @import '@bolt/tools-color-palette';
 
-@function text-contrast($color) {
+@function bolt-text-contrast($color) {
   @if (lightness($color) > 60) {
-    @return palette(black); // Lighter backgorund, return dark color
+    @return bolt-palette(black); // Lighter backgorund, return dark color
   }
   @else {
-    @return palette(white); // Darker background, return light color
+    @return bolt-palette(white); // Darker background, return light color
   }
 }
