--- a/packages/bolt-toolkit-ui/components/components-all/_components.all.scss
+++ b/packages/bolt-toolkit-ui/components/components-all/_components.all.scss
@@ -2,3 +2,4 @@
 @import '@bolt/components-page-footer';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-page-intro';
+@import '@bolt/components-button';
