--- a/packages/bolt-toolkit/bolt.scss
+++ b/packages/bolt-toolkit/bolt.scss
@@ -51,8 +51,9 @@
 @import '@bolt/utilities-all';
 
 
-
-
+/* ------------------------------------ *\
+   Theme testing
+\* ------------------------------------ */
 
 @mixin test-color($name, $tone: 'initial', $type: null) {
   $color: map-get-deep($bolt-colors, $name, $tone);
@@ -64,6 +65,7 @@
     color: var(--bolt-color-#{$type}, $color);
   }
 }
+
 @mixin test-background-color($name, $tone: 'initial', $type: null) {
   $background-color: map-get-deep($bolt-colors, $name, $tone);
   background-color: $background-color;
@@ -74,6 +76,7 @@
     background-color: var(--bolt-color-#{$type}, $background-color);
   }
 }
+
 @mixin test-border-color($name, $tone: 'initial', $type: null) {
   $border-color: map-get-deep($bolt-colors, $name, $tone);
   border-color: $border-color;
@@ -84,96 +87,98 @@
     border-color: var(--bolt-color-#{$type}, $border-color);
   }
 }
-@function text-contrast($color) {
-  @if (lightness($color) > 60) {
-    @return bolt-palette(black); // Lighter backgorund, return dark color
-  }
-  @else {
-    @return bolt-palette(white); // Darker background, return light color
-  }
-}
-@mixin _theme-settings(
+
+@mixin _test-theme-settings(
   $background,          // Background
   $primary,             // Button background
   $secondary,           // Link
-  $text: null,          // Text - Defaults to text-contrast($background) if not defined
+  $text: null,          // Text - Defaults to bolt-text-contrast($background) if not defined
   $heading: null,       // Heading - Defaults to $text if not defined
-  $button-text: null,   // Button text - Defaults to text-contrast($primary) if not defined
+  $button-text: null,   // Button text - Defaults to bolt-text-contrast($primary) if not defined
   $border: null         // Border - Defaults to $text if not defined
   ) {
   --bolt-color-background: $background;
   --bolt-color-primary: $primary;
   --bolt-color-secondary: $secondary;
   @if $text == null {
-    --bolt-color-text: text-contrast($background);
+    --bolt-color-text: bolt-text-contrast($background);
   }
   @else {
     --bolt-color-text: $text;
   }
   @if $heading == null {
-    --bolt-color-heading: text-contrast($background);
+    --bolt-color-heading: bolt-text-contrast($background);
   }
   @else {
     --bolt-color-heading: $heading;
   }
   @if $button-text == null {
-    --bolt-color-button-text: text-contrast($primary);
+    --bolt-color-button-text: bolt-text-contrast($primary);
   }
   @else {
     --bolt-color-button-text: $button-text;
   }
   @if $border == null {
-    --bolt-color-border: text-contrast($background);
+    --bolt-color-border: bolt-text-contrast($background);
   }
   @else {
     --bolt-color-border: $border;
   }
 }
+
 @mixin test-theme($name: 'xlight') {
   @if $name == 'xlight' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(white),
       bolt-palette(blue),
-      bolt-palette(blue, dark));
+      bolt-palette(blue),
+      null,
+      bolt-palette(indigo),
+      null,
+      null);
   }
   @elseif $name == 'light' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(gray, xlight),
       bolt-palette(blue),
-      bolt-palette(blue, dark));
+      bolt-palette(blue),
+      null,
+      bolt-palette(indigo),
+      null,
+      null);
   }
   @elseif $name == 'dark' {
-    @include _theme-settings(
-      bolt-palette(teal),
-      bolt-palette(blue, dark),
-      bolt-palette(blue, light));
+    @include _test-theme-settings(
+      bolt-palette(indigo, light),
+      bolt-palette(yellow),
+      bolt-palette(white));
   }
   @elseif $name == 'xdark' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(indigo),
-      bolt-palette(orange),
-      bolt-palette(blue, light));
+      bolt-palette(blue),
+      bolt-palette(white));
   }
   @elseif $name == 'notification' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(blue, light),
       bolt-palette(blue, dark),
       bolt-palette(blue));
   }
   @elseif $name == 'success' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(success, light),
       bolt-palette(success, dark),
       bolt-palette(success));
   }
   @elseif $name == 'warning' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(warning, light),
       bolt-palette(warning, dark),
       bolt-palette(warning));
   }
   @elseif $name == 'error' {
-    @include _theme-settings(
+    @include _test-theme-settings(
       bolt-palette(error, light),
       bolt-palette(error, dark),
       bolt-palette(warning, dark),
@@ -183,78 +188,52 @@
       bolt-palette(error));
   }
 }
-.testing {
-  @include test-color(black, initial, text);
-  @include test-background-color(white, initial, background);
+
+.t-test-body {
+  color: var(--bolt-color-text, inherit);
+  background-color: var(--bolt-color-background, inherit);
   * {
-    @include test-color(inherit);
-    @include test-background-color(inherit);
+    color: var(--bolt-color-text, inherit);
+    background-color: var(--bolt-color-background, inherit);
   }
-  /*@include color(yellow);*/
-  /*@include color(yellow, dark);*/
-  /*@include color(yellow, dark, ui);*/
-  /*@include color(yellow, dark, link);*/
-  /*@include background-color(teal);*/
-  /*@include background-color(teal, xdark);*/
-  /*@include background-color(teal, xdark, ui);*/
 }
-.mm-heading {
-  @include test-color(black, initial, heading);
-}
-.mm-hr {
-  @include bolt-margin(0 0 medium 0);
-  @include bolt-padding(0);
-  @include test-border-color(black);
-  border-width: solid;
-  border-style: solid;
-  border-bottom: 0;
-}
-.mm-link {
-  @include test-color(blue, initial, secondary);
-}
-.mm-button {
-  @include bolt-padding(small);
-  @include test-color(white, initial, button-text);
-  @include test-background-color(blue, initial, primary);
-  @include test-border-color(blue, initial, primary);
-  display: inline-block;
-  border-width: 1px;
-  border-style: solid;
-}
-.mm-button--secondary {
-  @include test-color(black, initial, secondary);
-  @include test-background-color(white, initial, background);
-  @include test-border-color(black, initial, secondary);
-}
-.t-xlight {
+
+.t-test-xlight {
   @include bolt-padding(medium);
   @include test-theme(xlight);
 }
-.t-light {
+
+.t-test-light {
   @include bolt-padding(medium);
   @include test-theme(light);
 }
-.t-dark {
+
+.t-test-dark {
   @include bolt-padding(medium);
   @include test-theme(dark);
 }
-.t-xdark {
+
+.t-test-xdark {
   @include bolt-padding(medium);
   @include test-theme(xdark);
 }
-.t-success {
+
+.t-test-success {
   @include bolt-padding(medium);
   @include test-theme(success);
 }
-.t-warning {
+
+.t-test-warning {
   @include bolt-padding(medium);
   @include test-theme(warning);
 }
-.t-error {
+
+.t-test-error {
   @include bolt-padding(medium);
   @include test-theme(error);
 }
-.t-notification {
+
+.t-test-notification {
   @include bolt-padding(medium, squished);
   @include test-theme(notification);
 }
