--- a/packages/bolt-toolkit-ui/components/components-button/button.twig
+++ b/packages/bolt-toolkit-ui/components/components-button/button.twig
@@ -1,14 +1,34 @@
-<div class="t-test-body">
+<div class="t-test-theme">
   <div class="{{ theme }}">
     <p>
-      Hamburger doner andouille, capicola pork loin spare ribs bacon corned beef chicken. Pig turkey tail fatback meatloaf, chicken pastrami ball tip tongue swine beef ribs drumstick tri-tip jerky. Turducken biltong kevin, jerky shoulder chicken turkey beef strip steak cupim ground round brisket. Meatloaf jerky prosciutto tenderloin strip steak, brisket venison sausage kevin. <a class="c-bolt-link" href="javascript:">Link</a>
+      Hamburger doner andouille, capicola pork loin spare ribs bacon corned beef chicken. Pig turkey tail fatback meatloaf, chicken pastrami ball tip tongue swine beef ribs drumstick tri-tip jerky. Turducken biltong kevin, jerky shoulder chicken turkey beef strip steak cupim ground round brisket. Meatloaf jerky prosciutto tenderloin strip steak, brisket venison sausage kevin. <a class="c-test-link" href="javascript:">Link</a> <a class="c-test-link" href="">Visited</a>
     </p>
     <p>
-      <a href="javascript:" class="c-bolt-button">
+      <a href="" class="c-test-button">
         {{ button.text }}
       </a>
-      <a href="javascript:" class="c-bolt-button c-bolt-button--secondary">
+      <a href="" class="c-test-button c-test-button--secondary">
         {{ button.text }}
+      </a>
+      <a href="" class="c-test-button c-test-button--tertiary">
+        {{ button.text }}
+      </a>
+    </p>
+    <p>
+      <a href="" class="c-test-button c-test-button--xsmall">
+        XSmall {{ button.text }}
+      </a>
+      <a href="" class="c-test-button c-test-button--small">
+        Small {{ button.text }}
+      </a>
+      <a href="" class="c-test-button c-test-button--medium">
+        Medium {{ button.text }}
+      </a>
+      <a href="" class="c-test-button c-test-button--large">
+        Large {{ button.text }}
+      </a>
+      <a href="" class="c-test-button c-test-button--xlarge">
+        XLarge {{ button.text }}
       </a>
     </p>
   </div>
